tests-snapshots/dbc-cantools/issue_184_extended_mux_multiple_values.snap.stderr
error[E0277]: the trait bound `u16: From<i8>` is not satisfied
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_multiple_values.snap.rs:115:134
    |
115 | ...exor: multiplexor.into() }),
    |                      ^^^^ the trait `From<i8>` is not implemented for `u16`
    |
help: the following other types implement trait `From<T>`
   --> $RUST/core/src/ascii/ascii_char.rs
    |
    | into_int_impl!(u8 u16 u32 u64 u128 char);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `u16` implements `From<Char>`
    |
   ::: $RUST/core/src/convert/num.rs
    |
    | impl_from!(bool => u16);
    | ^^^^^^^^^^^^^^^^^^^^^^^ `u16` implements `From<bool>`
...
    | impl_from!(u8 => u16, #[stable(feature = "lossless_int_conv", since = "1.5.0")]);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `u16` implements `From<u8>`
    = note: required for `i8` to implement `Into<u16>`
    = note: this error originates in the macro `into_int_impl` which comes from the expansion of the macro `impl_from` (in Nightly builds, run with -Z macro-backtrace for more info)
